Issue #13 : Add member pictures

--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -69,6 +69,7 @@
        personalUrl: http://chamerling.org
        jugmember: true
        memberFct: Vice-Secrétaire
+       email: chamerling.ebmws@gmail.com
 
  Talk(talk1):
    title: Introduction
