[Evo] Managing database evolutions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,7 +35,7 @@ secure.admin.password=trombone
 %playapps.application.mode=prod
 %playapps.application.log=INFO
 %playapps.db=mysql:play:play@play
-%playapps.jpa.ddl=update
+%playapps.jpa.ddl=none
 
 
 # i18n
@@ -110,7 +110,7 @@ db=mem
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
 # Specify the ddl generation pattern to use (default to update, set to none to disable it):
-# jpa.ddl=update
+jpa.ddl=none
 #
 # Debug SQL statements (logged using DEBUG level):
 # jpa.debugSQL=true
@@ -185,7 +185,7 @@ mail.smtp.channel=ssl
 #%test.module.cobertura=${play.path}/modules/cobertura
 %test.application.mode=dev
 %test.db=mem
-%test.jpa.ddl=create-drop
+%test.jpa.ddl=none
 %test.mail.smtp=mock
 
 # These features will be automatically enabled in the 1.1 release
