--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -71,11 +71,7 @@
    url: http://www.zenexity.com
    jugmember: true
    memberFct: Président
-   description: |
-                 h4. Test titre textile
-                 
-                 * premier item
-                 ** sous item
+   description: Test titre textile premier item sous item
 
  Speaker(speak2):
    fullName: Blip
